# spin-axum-todo

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
blog/: README.md  axum-state-complete-guide-v2.md  axum-state-complete-guide.md  hybrid-architecture-wasm-rust.md
core/: .gitignore  Cargo.toml  README.md
core/api/: Cargo.toml  Dockerfile  README.md
core/api/migrations/: 20250125000000_create_todos.down.sql  20250125000000_create_todos.up.sql  20250126000000_add_user_id.down.sql  20250126000000_add_user_id.up.sql  20250127000000_create_users.down.sql  20250127000000_create_users.up.sql  20250128000000_create_files.down.sql  20250128000000_create_files.up.sql
core/api/src/: config.rs  main.rs
core/crates/application/: Cargo.toml  README.md
core/crates/application/src/: lib.rs
core/crates/application/src/commands/: create_todo.rs  delete_file.rs  delete_todo.rs  mod.rs  update_todo.rs  upload_file.rs
core/crates/application/src/dto/: auth_dto.rs  batch_dto.rs  create_todo_dto.rs  mod.rs  update_todo_dto.rs
core/crates/application/src/queries/: download_file.rs  get_todo.rs  list_todos.rs  mod.rs
core/crates/application/src/services/: auth_service.rs  mod.rs
core/crates/domain/: Cargo.toml  README.md
core/crates/domain/src/: lib.rs
core/crates/domain/src/entities/: file.rs  mod.rs  todo.rs  user.rs
core/crates/domain/src/errors/: domain_error.rs  mod.rs
core/crates/domain/src/repositories/: file_repository.rs  mod.rs  storage_repository.rs  todo_cache.rs  todo_repository.rs  user_repository.rs
core/crates/infrastructure/: Cargo.toml  README.md
core/crates/infrastructure/src/: lib.rs
core/crates/infrastructure/src/persistence/: db_pools.rs  mod.rs
core/crates/infrastructure/src/persistence/postgres/: file_reader.rs  file_writer.rs  mod.rs  todo_reader.rs  todo_writer.rs  user_reader.rs  user_writer.rs
core/crates/infrastructure/src/persistence/redis/: mod.rs  todo_cache.rs
core/crates/infrastructure/src/persistence/s3/: mod.rs  s3_storage_service.rs
core/crates/infrastructure/src/repositories/: cached_todo_reader.rs  mod.rs
core/crates/infrastructure/src/services/: mod.rs  transactional_todo_service.rs
core/crates/presentation/: Cargo.toml  README.md
core/crates/presentation/src/: error.rs  lib.rs  routes.rs  state.rs
core/crates/presentation/src/handlers/: auth.rs  batch.rs  file.rs  healthz.rs  mod.rs  todo.rs
core/crates/presentation/src/middleware/: edge_verify.rs  mod.rs  user_context.rs
core/docs/: api.md  architecture.md  cache.md  security.md  setup.md  transaction.md
core/docs/axum-state/: 01-introduction.md  02-lifecycle.md  03-arc.md  04-clone.md  05-mutex-and-design.md  06-quickref.md  07-faq.md  08-generics-design.md  README.md
edge/: .gitignore  Cargo.toml  README.md  spin.toml
edge/auth/: Cargo.toml  expanded.rs
edge/auth/src/: lib.rs
edge/gateway/: Cargo.toml  expanded.rs
edge/gateway/src/: lib.rs
edge/wit/: README.md  auth.wit
scripts/: dev.sh  setup.sh  test-core.sh  test-edge.sh
