# =============================================================================
# Cargo.toml: Rust ワークスペース定義（クリーンアーキテクチャ版）
# =============================================================================
# 4層アーキテクチャ + エントリーポイントの5クレート構成
#
# 依存関係の方向（矢印は「依存する」を意味）:
#   api → presentation → application → domain ← infrastructure
#
# 各層の責務:
#   - domain:         ビジネスルール（エンティティ、リポジトリトレイト）
#   - application:    ユースケース（CQRS: Commands / Queries）
#   - infrastructure: 技術的実装（PostgreSQL、Redis）
#   - presentation:   HTTP インターフェース（axum ハンドラ）
#   - api:            エントリーポイント（DI 設定、サーバー起動）
#
# 使い方:
#   cargo build              # 全クレートをビルド
#   cargo run -p api         # API サーバーを実行
#   cargo test               # 全クレートのテストを実行
#   cargo doc --open         # ドキュメントを生成して開く
#   cargo clippy             # リントチェック
#   cargo fmt                # コードフォーマット
# =============================================================================

# -----------------------------------------------------------------------------
# [workspace]: ワークスペース設定
# -----------------------------------------------------------------------------
# Cargo ワークスペースは複数のクレートをまとめて管理する仕組み。
# - 依存関係のバージョンを統一できる
# - cargo コマンドで全クレートを一括操作できる
# - ビルドキャッシュを共有できる
[workspace]
members = [
    # -------------------------------------------------------------------------
    # クリーンアーキテクチャの4層（内側から外側の順）
    # -------------------------------------------------------------------------
    "crates/domain",         # 最内層: エンティティ、リポジトリトレイト、ドメインエラー
    "crates/application",    # 内側: ユースケース、DTO、サービス
    "crates/infrastructure", # 外側: PostgreSQL/Redis 実装、キャッシュ
    "crates/presentation",   # 最外層: HTTP ハンドラ、ルーティング、ミドルウェア

    # -------------------------------------------------------------------------
    # エントリーポイント（Composition Root）
    # -------------------------------------------------------------------------
    "api", # バイナリ: 依存性注入、サーバー起動
]

# Cargo resolver v2: Rust 2021 edition で推奨
# - より正確な依存関係解決
# - feature unification の改善
resolver = "2"

# =============================================================================
# [workspace.dependencies]: ワークスペース共通の依存関係
# =============================================================================
# 各クレートの Cargo.toml で { workspace = true } と書くことで
# ここで定義したバージョンを使用できる。
#
# メリット:
# - バージョンの一元管理
# - クレート間のバージョン不整合を防止
# - 依存関係の更新が容易
[workspace.dependencies]

# -----------------------------------------------------------------------------
# 非同期処理
# -----------------------------------------------------------------------------
# async-trait: トレイトで async fn を使用可能にするマクロ
# Rust 2024 Edition では言語サポートされるが、一部のケースで必要
async-trait = "0.1"

# tokio: 非同期ランタイム（デファクトスタンダード）
# features = ["full"]: 全機能を有効化（runtime, time, io, sync, fs, net, etc.）
tokio = { version = "1", features = ["full"] }

# -----------------------------------------------------------------------------
# エラーハンドリング
# -----------------------------------------------------------------------------
# thiserror: カスタムエラー型を簡潔に定義するマクロ
# #[derive(Error)] と #[error("...")] でエラーメッセージを定義
thiserror = "2"

# anyhow: アプリケーションレベルのエラーハンドリング
# Result<T, anyhow::Error> で任意のエラーをラップ
# 主に main 関数や統合処理で使用
anyhow = "1"

# -----------------------------------------------------------------------------
# 型定義
# -----------------------------------------------------------------------------
# uuid: 一意識別子（UUID v4 をエンティティ ID に使用）
# features:
#   - serde: シリアライズ/デシリアライズ対応
#   - v4: ランダム UUID 生成
uuid = { version = "1", features = ["serde", "v4"] }

# chrono: 日時処理（created_at, updated_at に使用）
# features:
#   - serde: シリアライズ/デシリアライズ対応
chrono = { version = "0.4", features = ["serde"] }

# -----------------------------------------------------------------------------
# シリアライズ/デシリアライズ
# -----------------------------------------------------------------------------
# serde: Rust のシリアライズフレームワーク
# features:
#   - derive: #[derive(Serialize, Deserialize)] マクロを有効化
serde = { version = "1", features = ["derive"] }

# serde_json: JSON 形式のシリアライズ/デシリアライズ
# Redis キャッシュでの JSON 保存に使用
serde_json = "1"

# -----------------------------------------------------------------------------
# ロギング
# -----------------------------------------------------------------------------
# tracing: 構造化ログ + 分散トレーシング
# マクロ: info!, warn!, error!, debug!, trace!
tracing = "0.1"

# tracing-subscriber: tracing のログ出力設定
# features:
#   - env-filter: RUST_LOG 環境変数でログレベルをフィルタリング
#   - json: JSON 形式でログ出力（マネージドサービス向け）
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# -----------------------------------------------------------------------------
# Web フレームワーク
# -----------------------------------------------------------------------------
# axum 0.8: Rust の Web フレームワーク（tokio チームが開発）
# 特徴:
#   - マクロ不要の型安全なルーティング
#   - Tower ミドルウェアとの統合
#   - 型安全なエクストラクタ（State, Path, Json, Query）
# features:
#   - multipart: ファイルアップロード用 Multipart エクストラクタ
axum = { version = "0.8", features = ["multipart"] }

# -----------------------------------------------------------------------------
# データベース
# -----------------------------------------------------------------------------
# sqlx 0.8: 非同期 SQL ツールキット
# 特徴:
#   - コンパイル時クエリ検証（sqlx::query! マクロ）
#   - 接続プール内蔵
#   - 複数 DB 対応（PostgreSQL, MySQL, SQLite）
# features:
#   - runtime-tokio: tokio ランタイムを使用
#   - postgres: PostgreSQL ドライバ
#   - uuid: UUID 型のサポート
#   - chrono: 日時型のサポート
#   - macros: query!, query_as! マクロ
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

# -----------------------------------------------------------------------------
# キャッシュ
# -----------------------------------------------------------------------------
# redis 1.0: Redis クライアント（Valkey/RESP 互換 DB にも対応）
# 2025年12月に 1.0 安定版リリース
# features:
#   - tokio-comp: tokio との非同期統合
# 注意: MultiplexedConnection は安価にクローン可能なため、async では接続プール不要
redis = { version = "1.0", features = ["tokio-comp"] }

# -----------------------------------------------------------------------------
# 設定
# -----------------------------------------------------------------------------
# dotenvy: .env ファイルを環境変数に読み込む
# 開発環境での設定管理に使用（本番では環境変数を直接設定）
dotenvy = "0.15"

# -----------------------------------------------------------------------------
# 認証
# -----------------------------------------------------------------------------
# bcrypt 0.18: パスワードハッシュ（bcrypt アルゴリズム）
# セキュアなパスワード保存に使用
# 0.18 で Rust 2024 Edition に更新、エラー型が簡素化
# 注意: 新規プロジェクトでは Argon2 が推奨されるが、既存システムとの互換性のため bcrypt を使用
bcrypt = "0.18"

# jsonwebtoken 10: JWT（JSON Web Token）の生成・検証
# ステートレス認証に使用
# features:
#   - aws_lc_rs: AWS の暗号ライブラリをバックエンドに使用（高速・FIPS 準拠）
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
