# =============================================================================
# application/Cargo.toml: アプリケーション層のクレート設定
# =============================================================================
# クリーンアーキテクチャの内側層。ユースケースを定義。
#
# 責務:
#   - Commands（書き込み操作）: CreateTodoCommand, UpdateTodoCommand, etc.
#   - Queries（読み取り操作）: GetTodoQuery, ListTodosQuery
#   - DTO（Data Transfer Object）: CreateTodoDto, UpdateTodoDto, etc.
#   - Services（横断的関心事）: AuthService
#
# CQRS パターン:
#   - Command: 状態を変更する操作（Writer を使用）
#   - Query: 状態を参照する操作（Reader を使用）
#
# 依存関係:
#   - domain: エンティティとリポジトリトレイトを使用
#   - infrastructure への依存は禁止（トレイト経由でアクセス）
#
# テスト:
#   cargo test -p application    # アプリケーション層のみテスト
# =============================================================================

[package]
# クレート名: 他のクレートから `use application::*;` でインポート
name = "application"
# バージョン: セマンティックバージョニング
version = "0.1.0"
# Rust エディション: 2024 で最新機能を使用
edition = "2024"

[dependencies]
# -----------------------------------------------------------------------------
# 内部依存（ワークスペース内のクレート）
# -----------------------------------------------------------------------------
# domain: ドメイン層への依存
# エンティティ（Todo, User, File）とリポジトリトレイトを使用
# path = "../domain": 相対パスで指定
domain = { path = "../domain" }

# -----------------------------------------------------------------------------
# 非同期トレイト
# -----------------------------------------------------------------------------
# async-trait: Command/Query トレイトで async fn を使用
async-trait = { workspace = true }

# -----------------------------------------------------------------------------
# エラーハンドリング
# -----------------------------------------------------------------------------
# thiserror: ApplicationError 列挙型の定義に使用
thiserror = { workspace = true }

# -----------------------------------------------------------------------------
# 型定義
# -----------------------------------------------------------------------------
# uuid: エンティティ ID の参照と生成
uuid = { workspace = true }

# chrono: 日時の参照（created_at, updated_at）
chrono = { workspace = true }

# -----------------------------------------------------------------------------
# シリアライズ
# -----------------------------------------------------------------------------
# serde: DTO の JSON 変換用
# DTO は HTTP リクエスト/レスポンスとの変換に使用
serde = { workspace = true }

# -----------------------------------------------------------------------------
# ロギング
# -----------------------------------------------------------------------------
# tracing: ユースケース実行時のログ出力
# info!("Creating todo: {:?}", dto); のように使用
tracing = { workspace = true }

# -----------------------------------------------------------------------------
# 認証
# -----------------------------------------------------------------------------
# bcrypt: パスワードのハッシュ化と検証
# AuthService で使用（register, login）
# bcrypt::hash(password, cost) でハッシュ化
# bcrypt::verify(password, hash) で検証
bcrypt = { workspace = true }

# jsonwebtoken: JWT トークンの生成と検証
# AuthService で使用（login 時にトークン発行）
# encode/decode でトークンを操作
jsonwebtoken = { workspace = true }
