# =============================================================================
# domain/Cargo.toml: ドメイン層のクレート設定
# =============================================================================
# クリーンアーキテクチャの最内層。ビジネスルールの中核を担当。
#
# 責務:
#   - エンティティ定義（Todo, User, File）
#   - リポジトリトレイト定義（TodoReader, TodoWriter, etc.）
#   - ドメインエラー定義（DomainError）
#
# 設計原則:
#   - 外部フレームワークへの依存を最小化
#   - axum, sqlx, redis などを知らない
#   - 純粋な Rust コードのみ
#
# テスト:
#   cargo test -p domain    # ドメイン層のみテスト
# =============================================================================

[package]
# クレート名: 他のクレートから `use domain::*;` でインポート
name = "domain"
# バージョン: セマンティックバージョニング（major.minor.patch）
version = "0.1.0"
# Rust エディション: 2024 で最新機能を使用
# - impl Trait in traits（async fn を含む）
# - より厳密なライフタイム推論
edition = "2024"

[dependencies]
# -----------------------------------------------------------------------------
# 非同期トレイト
# -----------------------------------------------------------------------------
# async-trait: トレイトで async fn を使用可能にする
# リポジトリトレイト（TodoReader, TodoWriter 等）で必要
# Rust 2024 Edition では一部のケースで言語サポートされるが、
# dyn Trait を使用する場合は引き続き必要
async-trait = { workspace = true }

# -----------------------------------------------------------------------------
# エラーハンドリング
# -----------------------------------------------------------------------------
# thiserror: カスタムエラー型を簡潔に定義
# DomainError 列挙型の定義に使用
# 例: #[error("Validation failed: {0}")]
thiserror = { workspace = true }

# -----------------------------------------------------------------------------
# 型定義
# -----------------------------------------------------------------------------
# uuid: エンティティの一意識別子（ID フィールド）
# Uuid::new_v4() でランダム UUID を生成
uuid = { workspace = true }

# chrono: 日時フィールド（created_at, updated_at）
# DateTime<Utc> でタイムゾーン付き日時を表現
chrono = { workspace = true }

# -----------------------------------------------------------------------------
# シリアライズ
# -----------------------------------------------------------------------------
# serde: エンティティの JSON 変換用
# #[derive(Serialize, Deserialize)] でマクロ展開
# #[serde(skip_serializing)] でフィールドを除外可能（例: password_hash）
serde = { workspace = true }
