# =============================================================================
# infrastructure/Cargo.toml: インフラストラクチャ層のクレート設定
# =============================================================================
# クリーンアーキテクチャの外側層。技術的実装を提供。
#
# 責務:
#   - PostgreSQL リポジトリ実装（PostgresTodoReader, PostgresTodoWriter, etc.）
#   - Redis キャッシュ実装（TodoCache）
#   - デコレータ実装（CachedTodoReader）
#   - トランザクションサービス（TransactionalTodoService）
#   - DB 接続プール管理（DbPools）
#
# CQRS パターン実装:
#   - Reader: 読み取り専用接続プール（レプリカ DB 対応）
#   - Writer: 書き込み専用接続プール（プライマリ DB）
#
# キャッシュ戦略:
#   - Cache-Aside: 読み取り時にキャッシュを確認、なければ DB から取得
#   - Write-Through: 書き込み時にキャッシュを更新/無効化
#
# 依存関係:
#   - domain: リポジトリトレイトを実装
#   - application への依存は禁止
#
# テスト:
#   cargo test -p infrastructure    # インフラ層のみテスト
# =============================================================================

[package]
# クレート名: 他のクレートから `use infrastructure::*;` でインポート
name = "infrastructure"
# バージョン: セマンティックバージョニング
version = "0.1.0"
# Rust エディション: 2021（sqlx との互換性のため）
edition = "2021"

[dependencies]
# -----------------------------------------------------------------------------
# 内部依存（ワークスペース内のクレート）
# -----------------------------------------------------------------------------
# domain: リポジトリトレイトの実装元
# TodoReader, TodoWriter, UserReader, UserWriter, FileReader, FileWriter,
# TodoCacheOps トレイトを実装する
domain = { path = "../domain" }

# -----------------------------------------------------------------------------
# 非同期トレイト
# -----------------------------------------------------------------------------
# async-trait: リポジトリトレイト実装で async fn を使用
async-trait = { workspace = true }

# -----------------------------------------------------------------------------
# エラーハンドリング
# -----------------------------------------------------------------------------
# thiserror: InfrastructureError（使用する場合）
thiserror = { workspace = true }

# -----------------------------------------------------------------------------
# 型定義
# -----------------------------------------------------------------------------
# uuid: エンティティ ID の処理
# sqlx の UUID 型との変換に使用
uuid = { workspace = true }

# chrono: 日時フィールドの処理
# sqlx の TIMESTAMP 型との変換に使用
chrono = { workspace = true }

# -----------------------------------------------------------------------------
# シリアライズ
# -----------------------------------------------------------------------------
# serde: Redis キャッシュでの JSON 変換
serde = { workspace = true }

# serde_json: Redis に Todo を JSON 形式で保存/読み取り
# serde_json::to_string() / serde_json::from_str()
serde_json = { workspace = true }

# -----------------------------------------------------------------------------
# ロギング
# -----------------------------------------------------------------------------
# tracing: DB/キャッシュ操作のログ出力
# debug!("Cache hit for todo_id: {}", id);
# warn!("Cache miss, falling back to DB");
tracing = { workspace = true }

# -----------------------------------------------------------------------------
# PostgreSQL
# -----------------------------------------------------------------------------
# sqlx: 非同期 PostgreSQL クライアント
# 主な機能:
#   - PgPool: 接続プール
#   - sqlx::query_as!: コンパイル時クエリ検証
#   - Transaction: トランザクション管理
sqlx = { workspace = true }

# -----------------------------------------------------------------------------
# Redis
# -----------------------------------------------------------------------------
# redis: 非同期 Redis クライアント
# 主な機能:
#   - AsyncCommands: GET, SET, DEL, EXPIRE
#   - aio::MultiplexedConnection: 非同期接続
redis = { workspace = true }

# -----------------------------------------------------------------------------
# AWS SDK (S3)
# -----------------------------------------------------------------------------
# aws-config: AWS SDK 設定（認証、リージョン、エンドポイント）
# behavior-version-latest: 最新の動作バージョンを使用
aws-config = { version = "1.5", features = ["behavior-version-latest"] }

# aws-sdk-s3: S3 クライアント
# ファイルストレージ操作（upload, download, delete）
aws-sdk-s3 = "1.65"
